[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "argusai-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",

    # Data validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",

    # Supabase
    "supabase>=2.4.0",

    # Auth / JWT
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",

    # Plaid
    "plaid-python>=20.0.0",

    # AI
    "anthropic>=0.28.0",
    "openai>=1.30.0",

    # Background jobs
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",

    # Encryption
    "cryptography>=42.0.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
